[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netblast"
version = "0.1.0"
description = "Estimate network change blast radius from structured dependencies."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "John Johansson"}]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/netblast"]

[tool.ruff]
line-length = 100
